# zoomcamp-repo-docker

./: README.md
01-docker-terraform/: Dockerfile  main.py
01-docker-terraform/docker run -it --rm /: .sh
pipeline/: Dockerfile  ingest_data.py  notebook.ipynb  pyproject.toml
